added second collection (actors) and swagger confi
