# routes/index.js
@@ -6,4 +6,6 @@ router.get('/', (req,res) => { res.send('Project 2 - Movies');});
 
 router.use('/movies', require('./movies'));
 
+router.use('/actors', require('./actors'));
+
 module.exports = router;
